// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-19smwyn"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-1qop9pa"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1vknfxw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-asq8cw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-127752e"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1mnt4ye"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-12injzb"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1q3mqh5"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    DEFAULT
  </button>
  <button
    className="css-3amftk"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    PRIMARY
  </button>
  <button
    className="css-aii26u"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-127752e"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-16vb05m"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    DEFAULT
  </button>
  <button
    className="css-18fklny"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    PRIMARY
  </button>
  <button
    className="css-ih8tov"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-127752e"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-19smwyn"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1vknfxw"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-1mnt4ye"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-1qop9pa"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-asq8cw"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-12injzb"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-nj61vj"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1rdrfoz"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1np80yu"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-iymz6n"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-3p6gx8"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-17dm8oa"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1sd18g7"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-vgfmaa"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-uo8e8b"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-127752e"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-19smwyn"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1vknfxw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-1mnt4ye"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1qop9pa"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-asq8cw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-12injzb"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="0d4bb3bf-95f9-4f4e-973d-74fd374efd77"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ssew8x"
    color="default"
    htmlFor="0d4bb3bf-95f9-4f4e-973d-74fd374efd77"
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="18e18650-c5fc-4bbc-8d64-64312220b03c"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-g2wchb"
    color="default"
    htmlFor="18e18650-c5fc-4bbc-8d64-64312220b03c"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="dc58779d-dc5e-4bbd-a814-31dd5ca8547d"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1mzhkwp"
    color="default"
    htmlFor="dc58779d-dc5e-4bbd-a814-31dd5ca8547d"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="99eb03d1-78ec-4009-bd94-5256341e2286"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1sqhdfx"
    color="default"
    htmlFor="99eb03d1-78ec-4009-bd94-5256341e2286"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="d486e6bb-2fea-49d4-b48b-4e11b9219eb9"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-12l6bok"
    color="primary"
    htmlFor="d486e6bb-2fea-49d4-b48b-4e11b9219eb9"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="e2b61c43-996b-4272-b8eb-42f6a020f03e"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1scoibj"
    color="primary"
    htmlFor="e2b61c43-996b-4272-b8eb-42f6a020f03e"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="92e3e27b-58b0-42dd-9c90-e706049247c0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-7lo405"
    color="primary"
    htmlFor="92e3e27b-58b0-42dd-9c90-e706049247c0"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="8b5583c9-80e1-4338-9666-c019e9053ede"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1b1c491"
    color="secondary"
    htmlFor="8b5583c9-80e1-4338-9666-c019e9053ede"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="8b6fd9fc-e509-44b2-814c-4908cc2fff19"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1a62135"
    color="secondary"
    htmlFor="8b6fd9fc-e509-44b2-814c-4908cc2fff19"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="c9f43da0-0041-4580-905d-b63f51a64a99"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1h0qpiu"
    color="secondary"
    htmlFor="c9f43da0-0041-4580-905d-b63f51a64a99"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="632cdbc4-2c8d-4fe5-b941-220d10539471"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1sqhdfx"
    color="default"
    htmlFor="632cdbc4-2c8d-4fe5-b941-220d10539471"
    shape="circle"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="95ae6980-54eb-4657-9f4c-b983dd6b4d1b"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-7lo405"
    color="primary"
    htmlFor="95ae6980-54eb-4657-9f4c-b983dd6b4d1b"
    shape="circle"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="f1244a5f-b9fd-46ab-9ecf-292e239a61aa"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1h0qpiu"
    color="secondary"
    htmlFor="f1244a5f-b9fd-46ab-9ecf-292e239a61aa"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="1e998925-916c-4167-bbf1-dbdc7b4c25a6"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-g2wchb"
    color="default"
    htmlFor="1e998925-916c-4167-bbf1-dbdc7b4c25a6"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="423b3a92-1a56-446d-a7c9-630b1c55d89e"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-12l6bok"
    color="primary"
    htmlFor="423b3a92-1a56-446d-a7c9-630b1c55d89e"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="aa37c2e6-8de2-4866-9cb8-01dcd5dfdfb6"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1b1c491"
    color="secondary"
    htmlFor="aa37c2e6-8de2-4866-9cb8-01dcd5dfdfb6"
    shape="default"
  />
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="89f4ef3e-5c12-4073-939f-10d3e5a52c8e"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1mzhkwp"
    color="default"
    htmlFor="89f4ef3e-5c12-4073-939f-10d3e5a52c8e"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="b4dc62af-4e18-4033-acd0-9335d8f11bad"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1scoibj"
    color="primary"
    htmlFor="b4dc62af-4e18-4033-acd0-9335d8f11bad"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="ef155d72-c9ac-452f-8046-3e3d310e3e3c"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1a62135"
    color="secondary"
    htmlFor="ef155d72-c9ac-452f-8046-3e3d310e3e3c"
    shape="rounded"
  />
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="e930611f-167c-4aae-a5a7-4097713529b2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-g2wchb"
    color="default"
    htmlFor="e930611f-167c-4aae-a5a7-4097713529b2"
    shape="default"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="0214569d-4364-4db8-9954-96079fd720f6"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-12l6bok"
    color="primary"
    htmlFor="0214569d-4364-4db8-9954-96079fd720f6"
    shape="default"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="193bf7bd-454f-4c83-800e-8b0206932e48"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1b1c491"
    color="secondary"
    htmlFor="193bf7bd-454f-4c83-800e-8b0206932e48"
    shape="default"
  />
</div>
`;

exports[`Storyshots Checkbox.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="3bf1c92d-3639-467c-adaf-0fa21d0024a8"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-g2wchb"
    color="default"
    htmlFor="3bf1c92d-3639-467c-adaf-0fa21d0024a8"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="4aff2ee7-0022-4f23-b69d-10eba85b49c1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-12l6bok"
    color="primary"
    htmlFor="4aff2ee7-0022-4f23-b69d-10eba85b49c1"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="74b73a2a-9ae1-451e-a317-a0ab4d0f666d"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1b1c491"
    color="secondary"
    htmlFor="74b73a2a-9ae1-451e-a317-a0ab4d0f666d"
    shape="default"
  />
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="b535d6db-373a-4f55-a96a-e71378e0c92e"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-g2wchb"
    color="default"
    htmlFor="b535d6db-373a-4f55-a96a-e71378e0c92e"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="59a29b59-2cc4-4d81-a9c7-4b1fe0627da7"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-12l6bok"
    color="primary"
    htmlFor="59a29b59-2cc4-4d81-a9c7-4b1fe0627da7"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="9bc6bf95-80a3-4e3a-ad62-e2df13224f67"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1b1c491"
    color="secondary"
    htmlFor="9bc6bf95-80a3-4e3a-ad62-e2df13224f67"
    shape="default"
  />
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="4ab82b0e-bf35-4e5a-899a-4ff189068554"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-9qy23a"
    color="default"
    htmlFor="4ab82b0e-bf35-4e5a-899a-4ff189068554"
  />
  Change my appearance from 
  <strong>
    "Knobs"
  </strong>
   tab
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="8054679a-e4d0-4b11-9211-a0417d7d7e22"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-qbzvg0"
    color="default"
    htmlFor="8054679a-e4d0-4b11-9211-a0417d7d7e22"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="d01a9f38-1aaf-414f-929b-efd799e911c8"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-10qy041"
    color="primary"
    htmlFor="d01a9f38-1aaf-414f-929b-efd799e911c8"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="e4e11af4-dcec-462e-b02c-37581cbf4119"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-w163mg"
    color="secondary"
    htmlFor="e4e11af4-dcec-462e-b02c-37581cbf4119"
  />
</div>
`;

exports[`Storyshots Switch.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="1f8d0cf1-1c4c-4c16-8e35-70e5745d1508"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-qbzvg0"
    color="default"
    htmlFor="1f8d0cf1-1c4c-4c16-8e35-70e5745d1508"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="a35ad28e-f839-4bbe-9942-c53391b2948a"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-10qy041"
    color="primary"
    htmlFor="a35ad28e-f839-4bbe-9942-c53391b2948a"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="7285f521-61bb-4deb-a498-b6922464b0b9"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-w163mg"
    color="secondary"
    htmlFor="7285f521-61bb-4deb-a498-b6922464b0b9"
  />
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="bc272905-d73e-487e-9c1e-d352220be41a"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-qbzvg0"
    color="default"
    htmlFor="bc272905-d73e-487e-9c1e-d352220be41a"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="8b85f0a2-6b4a-40f5-aa2a-95bb4cb28daf"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-10qy041"
    color="primary"
    htmlFor="8b85f0a2-6b4a-40f5-aa2a-95bb4cb28daf"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="09271ca0-7352-4df3-b5cf-d1c9266838f2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-w163mg"
    color="secondary"
    htmlFor="09271ca0-7352-4df3-b5cf-d1c9266838f2"
  />
</div>
`;
